--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -3556,6 +3556,32 @@ The maximum width of the kernel (in pixels). Prior to version
 in the input image (in that direction).
 \end{description}
 
+{ \subsubsubsection{Separable Gaussian Filter}
+}
+This is a separable 3D Gaussian filter for images discretised on
+a Cartesian voxel grid. These filters are composed of 3 1D filter
+kernels, one for the x,y and z directions each. Each 1D filter
+is specified by a Full Width at Half Maximum (FWHM) parameter
+(in millimetres), and a maximum spatial kernel width.
+The filter can be optionally normalised to 1.
+
+The rules which apply to the construction and application of the Gaussian filter follow the one of the Metz filter.
+
+{ \subsubsubsubsection{Parameters}
+}
+Sample parameters are given below
+\begin{verbatim}
+separable gaussian filter parameters :=
+x-dir filter fwhm (in mm) := 6
+y-dir filter fwhm (in mm) := 6
+z-dir filter fwhm (in mm) := 6
+x-dir maximum kernel size := 129
+y-dir maximum kernel size := 129
+z-dir maximum kernel size := 31
+Normalise filter to 1 := 1
+end separable gaussian filter parameters :=
+\end{verbatim}
+
 { \subsubsubsection{Median}
 }
 \label{sec:median}
