--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -1654,8 +1654,8 @@ End:=
   { \subsubsubsubsection{Algorithm description}
   }
   Hybrid kernelised expectation maximisation(HKEM) and kernelised expectation maximisation (KEM) iterative algorithms
-  are implemented corresponding to the one presented by Deidda D et al, ``Hybrid PET-MR list-mode kernelized expectation
-  maximization reconstruction for quantitative PET images of the carotid arteries", IEEE MIC Atlanta, 2017. However, this allows
+  are implemented corresponding to the one presented by Deidda D et al, ``Hybrid PET-MR list-mode kernelized expectation maximization reconstruction",
+  Inverse Problems, 2019, DOI: https://doi.org/10.1088/1361-6420/ab013f. However, this allows
   also sinogram-based reconstruction. Each voxel value of the image, \f$ \boldsymbol{\lambda}\f$, can be represented as a
   linear combination using the kernel method.  If we have an image with prior information, we can construct for each voxel
   \f$ j \f$ of the emission image a feature vector, $\f \boldsymbol{v}_j \f$, using the prior information. The voxel value,
@@ -1691,25 +1691,72 @@ End:=
 
   is the part coming from the emission iterative update. Here, the Gaussian kernel functions have been modulated by the distance between voxels in the image space.
 
-Below is an excerpt of a possible parameter for file KOSMAPOSL. A complete parameter file
+Below is an excerpt of a possible parameter file for KOSMAPOSL. A complete parameter file
 can be found in \textbf{STIR/samples/}. The changes in this parameter file includes the MR anatomical prior images and the kernel-based parameters. 
 
 
  \begin{verbatim}
-  KOSMAPOSL Parameters:=
+ An example of a KOSMAPOSL parameter file can be found in examples/samples/. It is similar to the OSMAPOSL parameter file withe following extra keywords
 
-  hybrid:=1
-  sigma m:= 1                                ;is the parameter $\f \sigma_{m} \f$;
-  sigma p:=1                                 ;is the parameter $\f \sigma_{p} \f$;
-  sigma dm:=1                                ;is the parameter $\f \sigma_{dm} \f$;
-  sigma dp:=1                                ;is the parameter $\f \sigma_{dp} \f$;
-  number of neighbours:= 3                   ;is the cubic root of the number of voxels in the neighbourhood;
-  anatomical image filenames:=filename        ;is the list of filenames of the anatomical images;
-  number of non-zero feature elements:=1     ;is the number of non zero elements in the feature vector;
-  only_2D:=0                                 ;=1 if you want to reconstruct 2D images;
+KOSMAPOSL Parameters:=
+
+;the following disables the alpha coefficient output:
+disable output :=1
 
 
-  End KOSMAPOSL Parameters :=
+; here we have the possibility to choose the parameters which define the kernel
+; matrix and the name of the anatomical image. the following are the defaults values:
+
+; 1 (default): use hybrid kernel (prior from MR and PET estimate)
+; OR
+; 0 kernel is MR-only
+hybrid:=1
+
+; Gaussian scaling parameter for the anatomical prior (units of image intensity)
+; It controls the edge preservation from the anatomical image, the bigger the stronger
+; default: 1
+sigma_m:= 1
+
+; Gaussian scaling parameter for the PET estimate (units of PET image intensity)
+; It controls the edge preservation from the functional image, the bigger the stronger
+; default: 1
+sigma_p:=1
+
+
+; NB: sigma_dm and sigma_dp should be the same
+; Spatial Gaussian scaling parameter for the anatomical prior (mm)
+; default: 1 (usual range 1-5)
+sigma_dm:=5
+
+; Spatial Gaussian scaling parameter for the PET prior (mm)
+; default: 1 (usual range 1-5)
+sigma_dp:=5
+
+; Number of neigbouring voxels to compare: (num_neighbours X num_neighbours X num_neighbours)
+; default: 3
+number of neighbours:= 3
+
+; Number of non-zero elements in the feature vectors. This makes you choose the size of your feature vector by default we only have one element
+; default: 1
+number of non-zero feature elements:=1
+
+; this are the file names of the anatomical images (at the moment we can accept only one image)
+anatomical image filenames:= {MRbrain.hv}
+
+; the following should be 1 if you want to reconstruct 2D data
+only_2D:=1
+
+; the following is the output prefix of the PET reconstructed image
+kernelised output filename prefix :=KOSMAPOSL
+
+objective function type:= PoissonLogLikelihoodWithLinearModelForMeanAndProjData
+PoissonLogLikelihoodWithLinearModelForMeanAndProjData Parameters:=
+
+.
+.
+.
+
+End KOSMAPOSL Parameters :=
   \end{verbatim}
 
 
