--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -253,7 +253,7 @@ A helpful note: You can specify just to make a single ``target'',
 using \texttt{make <target>}. All executable names are targets that
 make just the required executable (e.g., \texttt{make FBP2D}). A
 useful target for developers is to just make the tests, using
-\texttt{make BUILD_TESTS}. So \texttt{make BUILD_TESTS && make test}
+\texttt{make BUILD\_TESTS}. So \texttt{make BUILD\_TESTS && make test}
 would build and then run the tests.
 
 On Windows or MacOSX, the procedure is essentially the same, except that you will likely have
@@ -341,7 +341,7 @@ Here are some standard CMake variables that might be useful.
 \item \textit{CMAKE\_INSTALL\_PREFIX} specifies where the final installation has to occur. CMake
 provides normally a default in a system location, but you could set it for instance to
 \texttt{./install} to put the files inside your build directory.
-\item \textit{{CMAKE\_CXX\_STANDARD} can be used to tell CMake to add flags to your compiler to use
+\item \textit{CMAKE\_CXX\_STANDARD} can be used to tell CMake to add flags to your compiler to use
 a particular version of the C++ standard (if it supports it). It is now recommended to set 
 this to \texttt{11}. This is necessary e.g. for ROOT 6 support. Other possible values are
 \texttt{98}, \texttt{14} and \texttt{17} (not tested yet).
