tidy the data processor projector PR

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -3502,10 +3502,12 @@ See also the online documentation for the class \textbf{DataProcessor}.
 
 As of STIR version 4.0, it is now possible to use data processors 
 on images prior to forward projection and following back projection
-via with any projector. This supercedes functionality provided by 
+with any projector. This supercedes functionality provided by 
  \textbf{PresmoothingForwardProjectorByBin} and 
  \textbf{PostsmoothingBackProjectorByBin},
-  which can now be considered deprecated.
+  which can now be considered deprecated. Examples are available
+in \textbf{examples/samples/forward\_projector\_proj\_matrix\_ray\_tracing\_pre\_smoothing.par} 
+(and a similarly named back-projector example).
 
 { \subsubsubsection{Separable Convolution}
 }
