--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -2,6 +2,7 @@
 \batchmode
 \documentclass{article}
 \usepackage{geometry}
+\usepackage{amsmath}
 %\usepackage{a4wide}
 %\usepackage{layout}
 
@@ -253,7 +254,7 @@ A helpful note: You can specify just to make a single ``target'',
 using \texttt{make <target>}. All executable names are targets that
 make just the required executable (e.g., \texttt{make FBP2D}). A
 useful target for developers is to just make the tests, using
-\texttt{make BUILD\_TESTS}. So \texttt{make BUILD\_TESTS && make test}
+\texttt{make BUILD\_TESTS}. So \texttt{make BUILD\_TESTS \&\& make test}
 would build and then run the tests.
 
 On Windows or MacOSX, the procedure is essentially the same, except that you will likely have
@@ -354,7 +355,7 @@ specify the full path to the actual executable, this should be sufficient. If no
 \texttt{PYTHON\_LIBRARY} as well.
 
 There are various other variables that can be set, some of which are only visible if you toggled
-the display of \textt{Advanced} variables on. They should only be set by advanced users, or if a package
+the display of \texttt{Advanced} variables on. They should only be set by advanced users, or if a package
 cannot be found. For example, if CMake cannot find \textit{boost}, you will have to set \texttt{BOOST\_ROOT}.
 
 \subsubsection{
@@ -426,7 +427,7 @@ Running tests}
 We \textbf{highly recommend} running test programs after building. There are currently two
 sets of tests. The first set tests various components of
 \textit{STIR}. This process is described on the Wiki, but briefly can
-be run using \texttt{make BUILD_TESTS && make test}.
+be run using \texttt{make BUILD\_TESTS \&\& make test}.
 The second set of tests is available via the \textit{STIR} web-site, where we 
 we provide test reconstructions as part of the
 \textbf{recon\_test\_pack}, with an 
@@ -1656,39 +1657,39 @@ End:=
   Hybrid kernelised expectation maximisation(HKEM) and kernelised expectation maximisation (KEM) iterative algorithms
   are implemented corresponding to the one presented by Deidda D et al, ``Hybrid PET-MR list-mode kernelized expectation maximization reconstruction",
   Inverse Problems, 2019, DOI: https://doi.org/10.1088/1361-6420/ab013f. However, this allows
-  also sinogram-based reconstruction. Each voxel value of the image, \f$ \boldsymbol{\lambda}\f$, can be represented as a
+  also sinogram-based reconstruction. Each voxel value of the image, $ \boldsymbol{\lambda}$, can be represented as a
   linear combination using the kernel method.  If we have an image with prior information, we can construct for each voxel
-  \f$ j \f$ of the emission image a feature vector, $\f \boldsymbol{v}_j \f$, using the prior information. The voxel value,
-  \f$\lambda_j\f$, can then be described using the kernel matrix 
-  \f[
+  $ j $ of the emission image a feature vector, $ \boldsymbol{v}_j $, using the prior information. The voxel value,
+  $\lambda_j$, can then be described using the kernel matrix 
+  \[
    \lambda_j=  \sum_{l=1}^L \alpha_l k_{jl}
-  \f]
-
-  where \f$k_{jl}\f$ is the \f$jl^{th}\f$ kernel element of the matrix, \f$\boldsymbol{K}\f$.
+  \]
+  \noindent
+  where $k_{jl}$ is the $jl^{th}$ kernel element of the matrix, $\boldsymbol{K}$.
   The resulting algorithm with OSEM, for example, is the following:
 
-  \f[
-  \alpha^{(n+1)}_j =  \frac{ \alpha^{(n)}_j }{\sum_{m} k^{(n)}_{jm} \sum_i p_{mi}} \sum_{m}k^{(n)}_{jm}\sum_i p_{mi}\frac{ y_i }{\sum_{q} p_{iq} \sum_l k^{(n)}_{ql}\alpha^{(n)}_l  $
-  \f[
+  \[
+  \alpha^{(n+1)}_j =  \frac{ \alpha^{(n)}_j }{\sum_{m} k^{(n)}_{jm} \sum_i p_{mi}} \sum_{m}k^{(n)}_{jm}\sum_i p_{mi}\frac{ y_i }{\sum_{q} p_{iq} \sum_l k^{(n)}_{ql}\alpha^{(n)}_l  + s_i}
+  \]
+  \noindent
+  where the  element, $ jl $, of the kernel can be written as:
 
-  where the  element, $\f jl \f$, of the kernel can be written as:
-
-  \f[
+  \[
     k^{(n)}_{jl} = k_m(\boldsymbol{v}_j,\boldsymbol{v}_l) \cdot k_p(\boldsymbol{z}^{(n)}_j,\boldsymbol{z}^{(n)}_l);
-  \f]
-
+  \]
+  \noindent
   with
 
-  \f[
-   k_m(\boldsymbol{v}_j,\boldsymbol{v}_l) = \exp \left(\tiny - \frac{\|  \boldsymbol{v}_j-\boldsymbol{v}_l \|^2}{2 \sigma_m^2} \right) \exp \left(- \frac{\tiny \|  \boldsymbol{x}_j$
-  \f]
-
+  \[
+   k_m(\boldsymbol{v}_j,\boldsymbol{v}_l) = \exp \left(\tiny - \frac{\|  \boldsymbol{v}_j-\boldsymbol{v}_l \|^2}{2 \sigma_m^2} \right) \exp \left(- \frac{\tiny \|  \boldsymbol{x}_j-\boldsymbol{x}_l \|^2}{ \tiny 2 \sigma_{dm}^2} \right)
+  \]
+  \noindent
   being the MR component of the kernel and
 
-  \f[
-   k_p(\boldsymbol{z}^{(n)}_j,\boldsymbol{z}^{(n)}_l) = \exp \left(\tiny - \frac{\|  \boldsymbol{z}^{(n)}_j-\boldsymbol{z}^{(n)}_l \|^2}{2 \sigma_p^2} \right) \exp \left(\tiny - \f$
-  \f]
-
+  \[
+   k_p(\boldsymbol{z}^{(n)}_j,\boldsymbol{z}^{(n)}_l) = \exp \left(\tiny - \frac{\|  \boldsymbol{z}^{(n)}_j-\boldsymbol{z}^{(n)}_l \|^2}{2 \sigma_p^2} \right) \exp \left(\tiny - \frac{\|  \boldsymbol{x}_j-\boldsymbol{x}_l \|^2}{ \tiny{2 \sigma_{dp}^2}} \right)
+  \]
+  \noindent
   is the part coming from the emission iterative update. Here, the Gaussian kernel functions have been modulated by the distance between voxels in the image space.
 
 Below is an excerpt of a possible parameter file for KOSMAPOSL. A complete parameter file
